fix non-aligned copy-ID button

--- a/src/components/FormFields/index.scss
+++ b/src/components/FormFields/index.scss
@@ -15,7 +15,7 @@
 .location-row {
     .clipboard-copy-button {
         right: -30px;
-        top: 140px;
+        top: 40px;
     }
 
 }
